[project]
name = "llm-docs"
version = "0.1.0"
description = "LLM-based tool to generate README.md and llms.txt from source code."
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.9,<3.13"
dependencies = [
    "openai>=1.0.0",
    "transformers>=4.41.2",
    "tokenizers>=0.19.1",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=6.29.5",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
]
